@@ -26,7 +26,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-15-June-2013 Mark Dexter
+20-Jun-2013 Mark Dexter
+ # Fix Webdriver tests for Google Chrome, markup changes.
+
+15-Jun-2013 Mark Dexter
  # Fix failing system test.
 
 11-Jun-2013 Mark Dexter
